--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=back
+spring.datasource.url=jdbc:postgresql://localhost:5432/prueba_tecnica
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+server.port=8080
+spring.jpa.hibernate.ddl-auto= create-drop
+
+
