--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/prueba_tecnica
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8080
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 
 
